@@ -3,6 +3,7 @@
 = GENI Clearinghouse and Portal Release Notes =
 
 == 1.7 ==
+  * List of project in download omni bundle should only include active projects (#554)
   * On new project page, note showing that name of lead is public (#469)
   * Have raw manifest appear in a separate window/tab/popup (#520)
 
